fixed text alignment

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ html,body {
 
 .jumbotron {
   background:url('') no-repeat center center fixed;
-  height: 500px;
+  height: 550px;
   background-size: cover;
 }
 
